--- a/index.html
+++ b/index.html
@@ -274,7 +274,7 @@
     <!-- DOM -->
 
     <!-- CODE FOR THE TASKS -->
-
+<!-- 
     <div>
         <h1> DOM </h1>
         <div id="form-content" class="content">
@@ -292,7 +292,7 @@
             <p class="render"> Country : Pakistan </p>
             <p class="render"> contact : +92 300 1234567</p>
         </div>
-    </div>
+    </div> -->
 
 
 
